Phase_2/parser/parser.output
State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmntlist

    2 stmntlist: stmt
    3          | stmntlist stmt

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK SEMICOLON
   10     | CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr MULTI expr
   18     | expr DIV expr
   19     | expr MOD expr
   20     | expr GREATER expr
   21     | expr GREATER_EQUAL expr
   22     | expr LESS expr
   23     | expr LESS_EQUAL expr
   24     | expr EQUAL expr
   25     | expr NEQUAL expr
   26     | expr AND expr
   27     | expr OR expr
   28     | term

   29 term: LEFT_PARENTHES expr RIGHT_PARENTHES
   30     | MINUS expr
   31     | NOT expr
   32     | UPLUS lvalue
   33     | lvalue UPLUS
   34     | UMINUS lvalue
   35     | lvalue UMINUS
   36     | primary

   37 assignexpr: lvalue ASSIGN expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | LEFT_PARENTHES funcdef RIGHT_PARENTHES
   42        | const

   43 lvalue: ID
   44       | LOCAL ID
   45       | DCOLON ID
   46       | member

   47 member: lvalue DOT ID
   48       | lvalue LEFT_BRACKET expr RIGHT_BRACKET
   49       | call DOT ID
   50       | call LEFT_BRACKET expr RIGHT_BRACKET

   51 call: call LEFT_PARENTHES elist RIGHT_PARENTHES
   52     | lvalue callsuffix
   53     | LEFT_PARENTHES funcdef RIGHT_PARENTHES LEFT_PARENTHES elist RIGHT_PARENTHES

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: LEFT_PARENTHES elist RIGHT_PARENTHES

   57 methodcall: DOTS ID LEFT_PARENTHES elist RIGHT_PARENTHES

   58 elist: ε
   59      | expr
   60      | elist COMMA expr

   61 objectdef: LEFT_BRACKET elist RIGHT_BRACKET
   62          | LEFT_BRACKET indexed RIGHT_BRACKET

   63 indexed: indexedelemlist

   64 indexedelemlist: indexedelem
   65                | indexedelem COMMA indexedelemlist

   66 indexedelem: LEFT_CBRACKET expr COLON expr RIGHT_CBRACKET

   67 block: LEFT_CBRACKET stmntlist RIGHT_CBRACKET

   68 funcdef: FUNCTION LEFT_PARENTHES idlist RIGHT_PARENTHES block
   69        | FUNCTION ID LEFT_PARENTHES idlist RIGHT_PARENTHES block

   70 const: INTCONST
   71      | REAL
   72      | STRING
   73      | NIL
   74      | TRUE
   75      | FALSE

   76 idlist: ε
   77       | ID
   78       | idlist COMMA ID

   79 ifstmt: IF LEFT_PARENTHES expr RIGHT_PARENTHES stmt
   80       | ifstmt ELSE stmt

   81 whilestmt: WHILE LEFT_PARENTHES expr RIGHT_PARENTHES stmt

   82 forstmt: FOR LEFT_PARENTHES elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHES stmt

   83 returnstmt: RETURN SEMICOLON
   84           | RETURN expr SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF <strVal> (258) 79
    ELSE <strVal> (259) 80
    WHILE <strVal> (260) 81
    FOR <strVal> (261) 82
    FUNCTION <strVal> (262) 68 69
    RETURN <strVal> (263) 83 84
    BREAK <strVal> (264) 9
    CONTINUE <strVal> (265) 10
    AND <strVal> (266) 26
    OR <strVal> (267) 27
    LOCAL <strVal> (268) 44
    TRUE <strVal> (269) 74
    FALSE <strVal> (270) 75
    NIL <strVal> (271) 73
    EQUAL <strVal> (272) 24
    ASSIGN <strVal> (273) 37
    UPLUS <strVal> (274) 32 33
    PLUS <strVal> (275) 15
    UMINUS <strVal> (276) 34 35
    MINUS <strVal> (277) 16 30
    MULTI <strVal> (278) 17
    DIV <strVal> (279) 18
    MOD <strVal> (280) 19
    NEQUAL <strVal> (281) 25
    INTCONST <intVal> (282) 70
    REAL <realVal> (283) 71
    STRING <strVal> (284) 72
    GREATER_EQUAL <strVal> (285) 21
    LESS_EQUAL <strVal> (286) 23
    GREATER <strVal> (287) 20
    LESS <strVal> (288) 22
    LEFT_CBRACKET <strVal> (289) 66 67
    RIGHT_CBRACKET <strVal> (290) 66 67
    LEFT_BRACKET <strVal> (291) 48 50 61 62
    RIGHT_BRACKET <strVal> (292) 48 50 61 62
    LEFT_PARENTHES <strVal> (293) 29 41 51 53 56 57 68 69 79 81 82
    RIGHT_PARENTHES <strVal> (294) 29 41 51 53 56 57 68 69 79 81 82
    SEMICOLON <strVal> (295) 4 9 10 13 82 83 84
    COMMA <strVal> (296) 60 65 78
    DCOLON <strVal> (297) 45
    COLON <strVal> (298) 66
    DOTS <strVal> (299) 57
    DOT <strVal> (300) 47 49
    ID <strVal> (301) 43 44 45 47 49 57 69 77 78
    NOT (302) 31
    THEN (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    stmntlist (51)
        on left: 2 3
        on right: 1 3 67
    stmt (52)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3 79 80 81 82
    expr (53)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 50 59 60 66 79 81 82 84
    term (54)
        on left: 29 30 31 32 33 34 35 36
        on right: 28
    assignexpr (55)
        on left: 37
        on right: 14
    primary (56)
        on left: 38 39 40 41 42
        on right: 36
    lvalue (57)
        on left: 43 44 45 46
        on right: 32 33 34 35 37 38 47 48 52
    member (58)
        on left: 47 48 49 50
        on right: 46
    call (59)
        on left: 51 52 53
        on right: 39 49 50 51
    callsuffix (60)
        on left: 54 55
        on right: 52
    normcall (61)
        on left: 56
        on right: 54
    methodcall (62)
        on left: 57
        on right: 55
    elist (63)
        on left: 58 59 60
        on right: 51 53 56 57 60 61 82
    objectdef (64)
        on left: 61 62
        on right: 40
    indexed (65)
        on left: 63
        on right: 62
    indexedelemlist (66)
        on left: 64 65
        on right: 63 65
    indexedelem (67)
        on left: 66
        on right: 64 65
    block (68)
        on left: 67
        on right: 11 68 69
    funcdef (69)
        on left: 68 69
        on right: 12 41 53
    const (70)
        on left: 70 71 72 73 74 75
        on right: 42
    idlist (71)
        on left: 76 77 78
        on right: 68 69 78
    ifstmt (72)
        on left: 79 80
        on right: 5 80
    whilestmt (73)
        on left: 81
        on right: 6
    forstmt (74)
        on left: 82
        on right: 7
    returnstmt (75)
        on left: 83 84
        on right: 8


State 0

    0 $accept: • program $end

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    FUNCTION        shift, and go to state 4
    RETURN          shift, and go to state 5
    BREAK           shift, and go to state 6
    CONTINUE        shift, and go to state 7
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_CBRACKET   shift, and go to state 18
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    SEMICOLON       shift, and go to state 21
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    program     go to state 25
    stmntlist   go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   79 ifstmt: IF • LEFT_PARENTHES expr RIGHT_PARENTHES stmt

    LEFT_PARENTHES  shift, and go to state 43


State 2

   81 whilestmt: WHILE • LEFT_PARENTHES expr RIGHT_PARENTHES stmt

    LEFT_PARENTHES  shift, and go to state 44


State 3

   82 forstmt: FOR • LEFT_PARENTHES elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHES stmt

    LEFT_PARENTHES  shift, and go to state 45


State 4

   68 funcdef: FUNCTION • LEFT_PARENTHES idlist RIGHT_PARENTHES block
   69        | FUNCTION • ID LEFT_PARENTHES idlist RIGHT_PARENTHES block

    LEFT_PARENTHES  shift, and go to state 46
    ID              shift, and go to state 47


State 5

   83 returnstmt: RETURN • SEMICOLON
   84           | RETURN • expr SEMICOLON

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    SEMICOLON       shift, and go to state 48
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 49
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 6

    9 stmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 50


State 7

   10 stmt: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 51


State 8

   44 lvalue: LOCAL • ID

    ID  shift, and go to state 52


State 9

   74 const: TRUE •

    $default  reduce using rule 74 (const)


State 10

   75 const: FALSE •

    $default  reduce using rule 75 (const)


State 11

   73 const: NIL •

    $default  reduce using rule 73 (const)


State 12

   32 term: UPLUS • lvalue

    LOCAL           shift, and go to state 8
    LEFT_PARENTHES  shift, and go to state 53
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23

    lvalue  go to state 54
    member  go to state 33
    call    go to state 55


State 13

   34 term: UMINUS • lvalue

    LOCAL           shift, and go to state 8
    LEFT_PARENTHES  shift, and go to state 53
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23

    lvalue  go to state 56
    member  go to state 33
    call    go to state 55


State 14

   30 term: MINUS • expr

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 57
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 15

   70 const: INTCONST •

    $default  reduce using rule 70 (const)


State 16

   71 const: REAL •

    $default  reduce using rule 71 (const)


State 17

   72 const: STRING •

    $default  reduce using rule 72 (const)


State 18

   67 block: LEFT_CBRACKET • stmntlist RIGHT_CBRACKET

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    FUNCTION        shift, and go to state 4
    RETURN          shift, and go to state 5
    BREAK           shift, and go to state 6
    CONTINUE        shift, and go to state 7
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_CBRACKET   shift, and go to state 18
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    SEMICOLON       shift, and go to state 21
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    stmntlist   go to state 58
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 19

   61 objectdef: LEFT_BRACKET • elist RIGHT_BRACKET
   62          | LEFT_BRACKET • indexed RIGHT_BRACKET

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_CBRACKET   shift, and go to state 59
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    $default  reduce using rule 58 (elist)

    expr             go to state 60
    term             go to state 29
    assignexpr       go to state 30
    primary          go to state 31
    lvalue           go to state 32
    member           go to state 33
    call             go to state 34
    elist            go to state 61
    objectdef        go to state 35
    indexed          go to state 62
    indexedelemlist  go to state 63
    indexedelem      go to state 64
    const            go to state 38


State 20

   29 term: LEFT_PARENTHES • expr RIGHT_PARENTHES
   41 primary: LEFT_PARENTHES • funcdef RIGHT_PARENTHES
   53 call: LEFT_PARENTHES • funcdef RIGHT_PARENTHES LEFT_PARENTHES elist RIGHT_PARENTHES

    FUNCTION        shift, and go to state 4
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 65
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 66
    const       go to state 38


State 21

   13 stmt: SEMICOLON •

    $default  reduce using rule 13 (stmt)


State 22

   45 lvalue: DCOLON • ID

    ID  shift, and go to state 67


State 23

   43 lvalue: ID •

    $default  reduce using rule 43 (lvalue)


State 24

   31 term: NOT • expr

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 68
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 25

    0 $accept: program • $end

    $end  shift, and go to state 69


State 26

    1 program: stmntlist •
    3 stmntlist: stmntlist • stmt

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    FUNCTION        shift, and go to state 4
    RETURN          shift, and go to state 5
    BREAK           shift, and go to state 6
    CONTINUE        shift, and go to state 7
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_CBRACKET   shift, and go to state 18
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    SEMICOLON       shift, and go to state 21
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt        go to state 70
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 27

    2 stmntlist: stmt •

    $default  reduce using rule 2 (stmntlist)


State 28

    4 stmt: expr • SEMICOLON
   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULTI expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NEQUAL expr
   26     | expr • AND expr
   27     | expr • OR expr

    AND            shift, and go to state 71
    OR             shift, and go to state 72
    EQUAL          shift, and go to state 73
    PLUS           shift, and go to state 74
    MINUS          shift, and go to state 75
    MULTI          shift, and go to state 76
    DIV            shift, and go to state 77
    MOD            shift, and go to state 78
    NEQUAL         shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83
    SEMICOLON      shift, and go to state 84


State 29

   28 expr: term •

    $default  reduce using rule 28 (expr)


State 30

   14 expr: assignexpr •

    $default  reduce using rule 14 (expr)


State 31

   36 term: primary •

    $default  reduce using rule 36 (term)


State 32

   33 term: lvalue • UPLUS
   35     | lvalue • UMINUS
   37 assignexpr: lvalue • ASSIGN expr
   38 primary: lvalue •
   47 member: lvalue • DOT ID
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue • callsuffix

    ASSIGN          shift, and go to state 85
    UPLUS           shift, and go to state 86
    UMINUS          shift, and go to state 87
    LEFT_BRACKET    shift, and go to state 88
    LEFT_PARENTHES  shift, and go to state 89
    DOTS            shift, and go to state 90
    DOT             shift, and go to state 91

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 33

   46 lvalue: member •

    $default  reduce using rule 46 (lvalue)


State 34

   39 primary: call •
   49 member: call • DOT ID
   50       | call • LEFT_BRACKET expr RIGHT_BRACKET
   51 call: call • LEFT_PARENTHES elist RIGHT_PARENTHES

    LEFT_BRACKET    shift, and go to state 95
    LEFT_PARENTHES  shift, and go to state 96
    DOT             shift, and go to state 97

    $default  reduce using rule 39 (primary)


State 35

   40 primary: objectdef •

    $default  reduce using rule 40 (primary)


State 36

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 37

   12 stmt: funcdef •

    $default  reduce using rule 12 (stmt)


State 38

   42 primary: const •

    $default  reduce using rule 42 (primary)


State 39

    5 stmt: ifstmt •
   80 ifstmt: ifstmt • ELSE stmt

    ELSE  shift, and go to state 98

    ELSE      [reduce using rule 5 (stmt)]
    $default  reduce using rule 5 (stmt)


State 40

    6 stmt: whilestmt •

    $default  reduce using rule 6 (stmt)


State 41

    7 stmt: forstmt •

    $default  reduce using rule 7 (stmt)


State 42

    8 stmt: returnstmt •

    $default  reduce using rule 8 (stmt)


State 43

   79 ifstmt: IF LEFT_PARENTHES • expr RIGHT_PARENTHES stmt

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 99
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 44

   81 whilestmt: WHILE LEFT_PARENTHES • expr RIGHT_PARENTHES stmt

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 100
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 45

   82 forstmt: FOR LEFT_PARENTHES • elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHES stmt

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    $default  reduce using rule 58 (elist)

    expr        go to state 60
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 101
    objectdef   go to state 35
    const       go to state 38


State 46

   68 funcdef: FUNCTION LEFT_PARENTHES • idlist RIGHT_PARENTHES block

    ID  shift, and go to state 102

    $default  reduce using rule 76 (idlist)

    idlist  go to state 103


State 47

   69 funcdef: FUNCTION ID • LEFT_PARENTHES idlist RIGHT_PARENTHES block

    LEFT_PARENTHES  shift, and go to state 104


State 48

   83 returnstmt: RETURN SEMICOLON •

    $default  reduce using rule 83 (returnstmt)


State 49

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULTI expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NEQUAL expr
   26     | expr • AND expr
   27     | expr • OR expr
   84 returnstmt: RETURN expr • SEMICOLON

    AND            shift, and go to state 71
    OR             shift, and go to state 72
    EQUAL          shift, and go to state 73
    PLUS           shift, and go to state 74
    MINUS          shift, and go to state 75
    MULTI          shift, and go to state 76
    DIV            shift, and go to state 77
    MOD            shift, and go to state 78
    NEQUAL         shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83
    SEMICOLON      shift, and go to state 105


State 50

    9 stmt: BREAK SEMICOLON •

    $default  reduce using rule 9 (stmt)


State 51

   10 stmt: CONTINUE SEMICOLON •

    $default  reduce using rule 10 (stmt)


State 52

   44 lvalue: LOCAL ID •

    $default  reduce using rule 44 (lvalue)


State 53

   53 call: LEFT_PARENTHES • funcdef RIGHT_PARENTHES LEFT_PARENTHES elist RIGHT_PARENTHES

    FUNCTION  shift, and go to state 4

    funcdef  go to state 106


State 54

   32 term: UPLUS lvalue •
   47 member: lvalue • DOT ID
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue • callsuffix

    LEFT_BRACKET    shift, and go to state 88
    LEFT_PARENTHES  shift, and go to state 89
    DOTS            shift, and go to state 90
    DOT             shift, and go to state 91

    $default  reduce using rule 32 (term)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 55

   49 member: call • DOT ID
   50       | call • LEFT_BRACKET expr RIGHT_BRACKET
   51 call: call • LEFT_PARENTHES elist RIGHT_PARENTHES

    LEFT_BRACKET    shift, and go to state 95
    LEFT_PARENTHES  shift, and go to state 96
    DOT             shift, and go to state 97


State 56

   34 term: UMINUS lvalue •
   47 member: lvalue • DOT ID
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue • callsuffix

    LEFT_BRACKET    shift, and go to state 88
    LEFT_PARENTHES  shift, and go to state 89
    DOTS            shift, and go to state 90
    DOT             shift, and go to state 91

    $default  reduce using rule 34 (term)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 57

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULTI expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NEQUAL expr
   26     | expr • AND expr
   27     | expr • OR expr
   30 term: MINUS expr •

    MULTI  shift, and go to state 76
    DIV    shift, and go to state 77
    MOD    shift, and go to state 78

    $default  reduce using rule 30 (term)


State 58

    3 stmntlist: stmntlist • stmt
   67 block: LEFT_CBRACKET stmntlist • RIGHT_CBRACKET

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    FUNCTION        shift, and go to state 4
    RETURN          shift, and go to state 5
    BREAK           shift, and go to state 6
    CONTINUE        shift, and go to state 7
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_CBRACKET   shift, and go to state 18
    RIGHT_CBRACKET  shift, and go to state 107
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    SEMICOLON       shift, and go to state 21
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    stmt        go to state 70
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 59

   66 indexedelem: LEFT_CBRACKET • expr COLON expr RIGHT_CBRACKET

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    UPLUS           shift, and go to state 12
    UMINUS          shift, and go to state 13
    MINUS           shift, and go to state 14
    INTCONST        shift, and go to state 15
    REAL            shift, and go to state 16
    STRING          shift, and go to state 17
    LEFT_BRACKET    shift, and go to state 19
    LEFT_PARENTHES  shift, and go to state 20
    DCOLON          shift, and go to state 22
    ID              shift, and go to state 23
    NOT             shift, and go to state 24

    expr        go to state 108
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 60

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULTI expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NEQUAL expr
   26     | expr • AND expr
   27     | expr • OR expr
   59 elist: expr •

    AND            shift, and go to state 71
    OR             shift, and go to state 72
    EQUAL          shift, and go to state 73
    PLUS           shift, and go to state 74
    MINUS          shift, and go to state 75
    MULTI          shift, and go to state 76
    DIV            shift, and go to state 77
    MOD            shift, and go to state 78
    NEQUAL         shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83

    $default  reduce using rule 59 (elist)


State 61

   60 elist: elist • COMMA expr
   61 objectdef: LEFT_BRACKET elist • RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 109
    COMMA          shift, and go to state 110


State 62

   62 objectdef: LEFT_BRACKET indexed • RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 111


State 63

   63 indexed: indexedelemlist •

    $default  reduce using rule 63 (indexed)


State 64

   64 indexedelemlist: indexedelem •
   65                | indexedelem • COMMA indexedelemlist

    COMMA  shift, and go to state 112

    $default  reduce using rule 64 (indexedelemlist)


State 65
